Feature/html check (#75)
* Style : update spacing

* Style : update div in ul

* Style : update div in ul

* Style : update div in ul

* Style : update div in ul

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg row-cols-lg-2 py-3">
         <a class="navbar-brand me-5 col-lg-auto" href="../practice-02/index.html">
-          <img src="./img/logo.png" alt="logo" />
+          <img src="./img/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
           aria-controls="offcanvasNavbar">
@@ -71,7 +71,7 @@
     --------------------->
     <main class="main">
       <!-- introduce -->
-      <section class="main-introduce pt-3 pt-lg-5 pb-3">
+      <section class="main-introduce pt-3 pt-lg-5 pb-3 pb-lg-4">
           <div class="container">
               <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end  " tabindex="-1">
                   <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
@@ -99,8 +99,8 @@
                 </p>
               </div>
               <!-- card-body -->
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title mb-3">
+              <div class="card-body pb-lg-3">
+                <h1 class="card-title pricing-card-title mb-3 pt-lg-4">
                   <strong class="display-1"> $8,90 </strong>
                   <small class="text-muted">/month</small>
                 </h1>
@@ -178,8 +178,8 @@
                 </p>
               </div>
               <!-- card-body -->
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title mb-3">
+              <div class="card-body pb-lg-3">
+                <h1 class="card-title pricing-card-title mb-3 pt-lg-4">
                   <strong class="display-1">$29,90 </strong>
                   <small class="text-muted">/month</small>
                 </h1>
@@ -249,8 +249,8 @@
                 </p>
               </div>
               <!-- card-body -->
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title mb-3">
+              <div class="card-body pb-lg-3">
+                <h1 class="card-title pricing-card-title mb-3 pt-lg-4">
                   <strong class="display-1">$39,90 </strong>
                   <small class="text-muted">/month</small>
                 </h1>
@@ -333,7 +333,7 @@
           <h2 class="col-12 display-1 mt-5 mb-4">Frequently asked questions</h2>
           <article class="question-article col d-lg-flex flex-lg-column align-items-lg-end">
               <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
-                  <div class="accordion-item">
+                  <div class="accordion-item pt-lg-4 pb-lg-4">
                       <h4 class="accordion-header" id="panelsStayOpen-headingOne">
                           <button class="accordion-button display-4" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
                               How Does Yoora CRM Compare To The Competition?
@@ -345,7 +345,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="accordion-item">
+                  <div class="accordion-item pt-lg-4 pb-lg-4">
                       <h4 class="accordion-header" id="panelsStayOpen-headingTwo">
                           <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
                               Can I Change Plans Or Canc  el My Subscription At Any Time?
@@ -358,7 +358,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="accordion-item">
+                  <div class="accordion-item pt-lg-4 pb-lg-4">
                       <h4 class="accordion-header" id="panelsStayOpen-headingThree">
                           <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
                               How Secure Is My Data With Yoora CRM?
@@ -370,20 +370,20 @@
                           </div>
                       </div>
                   </div>
-                  <div class="accordion-item">
+                  <div class="accordion-item pt-lg-4 pb-lg-4">
                       <h4 class="accordion-header" id="panelsStayOpen-headingFour">
                           <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
                               What Is The Uptime Guarantee?
                           </button>
                       </h4>
-                      <div id="panelsStayOpen-collapsefour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
+                      <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                           <div class="accordion-body fs-6">
                               Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation, and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them and increasing the overall price point.
                           </div>
                       </div>
                   </div>
-                  <div class="accordion-item">
-                      <h4 class="accordion-header" id="panelsStayOpen-heading">
+                  <div class="accordion-item pt-lg-4 pb-lg-4">
+                      <h4 class="accordion-header" id="panelsStayOpen-headingFive">
                           <button class="accordion-button display-4 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
                               How Can I Add More Emails To My Account?
                           </button>
@@ -416,7 +416,7 @@
         <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
           <div class="col-12 col-lg-7">
             <div class="cta-content p-5 p-lg-0">
-                <h1 class="display-1" href="#">
+                <h1 class="display-1">
                   <a href="#" class="text-white">
                     Ready to supercharge your business?
                   </a>
@@ -473,47 +473,47 @@
           <!-- navigation link -->
           <div class="col-12 col-lg-8 mt-5 mt-lg-0 ">
             <div class="row row-cols-3 gap-5 gap-lg-0 justify-content-lg-between mb-lg-5">
-              <ul class="col-12 col-lg-3 w-auto">
-                <div class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5 text-black">Company</a>
+              <div class="col-12 col-lg-3 w-auto ">
+                <ul class="row gap-3 flex-lg-column">
+                  <li><a href="#" class="fs-5 text-black">Company</a></li>
                   <li><a class="fs-6 text-black" href="#">About</a></li>
                   <li><a class="fs-6 text-black" href="#">Pricing</a></li>
                   <li><a class="fs-6 text-black" href="#">Jobs</a></li>
                   <li><a class="fs-6 text-black" href="#">Blog</a></li>
                   <li><a class="fs-6 text-black" href="#">Careers</a></li>
-                </div>
-              </ul>
-              <ul class="col-12 cols-lg-3 w-auto ">
-                <div class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5 text-black">Product</a>
+                </ul>
+              </div>
+              <div class="col-12 cols-lg-3 w-auto ">
+                <ul class="row gap-3 flex-lg-column">
+                  <li><a href="#" class="fs-5 text-black">Product</a></li>
                   <li><a class="fs-6 text-black" href="#">Sales software</a></li>
                   <li><a class="fs-6 text-black" href="#">Features</a></li>
                   <li><a class="fs-6 text-black" href="#">Privacy and security</a></li>
                   <li><a class="fs-6 text-black" href="#">Marketplace</a></li>
                   <li><a class="fs-6 text-black" href="#">Status</a></li>
                   <li><a class="fs-6 text-black" href="#">API</a></li>
-                </div>
-              </ul>
-              <ul class="col-12 cols-lg-3 w-auto">
-                <div class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5 text-black">Discover</a>
+                </ul>
+              </div>
+              <div class="col-12 cols-lg-3 w-auto ">
+                <ul class="row gap-3 flex-lg-column">
+                  <li><a href="#" class="fs-5 text-black">Discover</a></li>
                   <li><a class="fs-6 text-black" href="#">Partner Program</a></li>
                   <li><a class="fs-6 text-black" href="#">Get our newsletter</a></li>
                   <li><a class="fs-6 text-black" href="#">Sales Pipeline Course</a></li>
                   <li><a class="fs-6 text-black" href="#">What is CRM?</a></li>
                   <li><a class="fs-6 text-black" href="#">CRM Comparison</a></li>
                   <li><a class="fs-6 text-black" href="#">Resources</a></li>
-                </div>
-              </ul>
-              <ul class="col-12 cols-lg-3 w-auto">
-                <div class="row gap-3 flex-lg-column">
-                  <a href="#" class="fs-5 text-black">Help Center</a>
+                </ul>
+              </div>
+              <div class="col-12 cols-lg-3 w-auto">
+                <ul class="row gap-3 flex-lg-column">
+                  <li><a href="#" class="fs-5 text-black">Help Center</a></li>
                   <li><a class="fs-6 text-black" href="#">Community</a></li>
                   <li><a class="fs-6 text-black" href="#">Knowledge Base</a></li>
                   <li><a class="fs-6 text-black" href="#">Academy</a></li>
                   <li><a class="fs-6 text-black" href="#">Support</a></li>
-                </div>
-              </ul>
+                </ul>
+              </div>
             </div>
           </div>
           <!-- copyright -->
@@ -525,13 +525,13 @@
                   <a class="text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
                 </h3>
               </div>
-              <ul class="col-12 col-lg-4  ">
-                <div class="row gap-3 d-lg-flex flex-column flex-lg-row flex-lg-nowrap ">
+              <div class="col-12 col-lg-4 ">
+                <ul class="row gap-3 d-lg-flex flex-column flex-lg-row flex-lg-nowrap ">
                   <li class="w-auto"><a class="fs-6 text-black" href="#">Terms of Service</a></li>
                   <li class="w-auto"><a class="fs-6 text-black" href="#">Privacy Police</a></li>
                   <li class="w-auto"><a class="fs-6 text-black" href="#">Cookie</a></li>
-                </div>
-              </ul>
+                </ul>
+              </div>
               <div class="col-12 col-lg-4 d-flex justify-content-lg-end ">
                 <i class="bi bi-globe2"></i>
                 <select class="btn p-0 fs-6 text-black" name="language" id="language">
