Feat : update grid-system

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -160,9 +160,9 @@
     --------------------->
     <section class="service ">
       <div class="container">
-        <div class="row row-cols-md-2 gap-2 gap-lg-4 flex-md-nowrap">
-          <div class="service-left  col-12 col-md-6 mb-md-0">
-            <div class="card">
+        <div class="row row-cols-md-2 gap-2 flex-md-nowrap">
+          <div class="service-left d-flex col-12 col-md-6 mb-md-0 ">
+            <div class="card w-100 mb-md-0">
               <h5 class="card-header">SERVICE</h5>
               <div class="card-body">
                 <h1 class="card-text">
@@ -194,8 +194,8 @@
     --------------------->
     <section class="product">
         <div class="container">
-            <div class="product-content row row-cols-md-2 row-cols-lg-3 gap-4">
-              <div class="col-12 d-flex">
+            <div class="product-content row row-cols-md-2 row-cols-lg-3 ">
+              <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
                 <div class="card card-img  ">
                   <h5 class="card-header">New</h5>
                   <picture>
@@ -217,7 +217,7 @@
                 </div>
               </div>
 
-              <div class="col-12 d-flex">
+              <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
                 <div class="card card-img  ">
                   <h5 class="card-header">Sales</h5>
                   <picture>
@@ -238,7 +238,7 @@
                   <h4 class="card-footer">20 Mar 2022, <span class="text-black-50">by Bill Holloway</span></h4>
                 </div>
               </div>
-              <div class="col-12 d-flex">
+              <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
                 <div class="card card-img ">
                   <h5 class="card-header">Sales</h5>
                   <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
@@ -253,7 +253,7 @@
                   <h4 class="card-footer">07 Jun 2022, <span class="text-black-50">by Stephen Henderson</span>
                 </div>
               </div>
-              <div class="col-12 d-flex">
+              <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
                 <div class="card card-img  ">
                   <h5 class="card-header">Sales</h5>
                   <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
@@ -268,7 +268,7 @@
                   <h4 class="card-footer">09 Jan 2022,<span class="text-black-50">by joshua Nash</span> </h4>
                 </div>
               </div>
-              <div class="col-12 d-flex">
+              <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
                 <div class="card card-img  ">
                   <h5 class="card-header">Product</h5>
                   <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
@@ -283,7 +283,7 @@
                   <h4 class="card-footer">08 Jul 2022, <span class="text-black-50"> Leroy Figueroa</span> </h4>
                 </div>
               </div>
-              <div class="col-12 d-flex">
+              <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
                 <div class="card card-img  ">
                   <h5 class="card-header">Product</h5>
                   <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
@@ -314,7 +314,7 @@
     <section class="marketing">
       <div class="container">
         <div class="marketing-content row row-cols-lg-2">
-          <div class="col-12 d-flex mb-5 mb-lg-0">
+          <div class="col-12 mb-5 mb-lg-0">
             <div class="card card-img">
               <h5 class="card-header">Marketing</h5>
               <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top"
@@ -391,7 +391,8 @@
 
     <section class="article product">
         <div class="container">
-            <div class="product-content">
+            <div class="product-content row row-cols-md-2 row-cols-lg-3 ">
+              <div class="col-12 mb-5 mb-lg-0">
                 <div class="card card-img">
                     <h5 class="card-header">SERVICE</h5>
                     <img src="./img/article__img1.png" alt="Here is a photo of the article title above" class="card-img-top"
@@ -405,6 +406,8 @@
                     </div>
                     <h4 class="card-footer">29 Jun 2022, <span class="text-black-50">by joshua Nash</span>
                 </div>
+              </div>
+              <div class="col-12 mb-5 mb-lg-0">
                 <div class="card card-img">
                     <h5 class="card-header">SALES</h5>
                     <img src="./img/article__img2.png" alt="Here is a photo of the article title above" class="card-img-top"
@@ -418,6 +421,8 @@
                     </div>
                     <h4 class="card-footer">29 Mar 2022,, <span class="text-black-50">by Amanda Brooks</span>
                 </div>
+              </div>
+              <div class="col-12 mb-5 mb-lg-0">
                 <div class="card card-img">
                     <h5 class="card-header">SERVICE</h5>
                     <img src="./img/article__img3.png" alt="Here is a photo of the article title above" class="card-img-top"
@@ -431,6 +436,7 @@
                     </div>
                     <h4 class="card-footer"> 27 Dec 2022, <span class="text-black-50">by Roxie Sandoval</span>
                 </div>
+              </div>
             </div>
         </div>
     </section>
