--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -163,11 +163,11 @@
         <div class="row row-cols-md-2 gap-2 flex-md-nowrap">
           <div class="service-left d-flex col-12 col-md-6 mb-md-0 ">
             <div class="card w-100 mb-md-0">
-              <h5 class="card-header">SERVICE</h5>
+              <h1 class="card-header">SERVICE</h1>
               <div class="card-body">
-                <h1 class="card-text">
+                <h3 class="card-text">
                   CRM insights: Selecting the Right One for Your Organization
-                </h1>
+                </h3>
               </div>
               <h4 class="card-footer">
                 05 Sep 2022, <span class="text-black-50">by Joshua Nash</span>
@@ -197,7 +197,7 @@
           <div class="product-content row row-cols-md-2 row-cols-lg-3">
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h5 class="card-header">New</h5>
+                  <h1 class="card-header">New</h1>
                   <picture>
                       <!-- mobile -->
                       <source media="(max-width:768px)" srcset="./img/product_img1-0.5x.jpg ">
@@ -218,7 +218,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h5 class="card-header">Sales</h5>
+                  <h1 class="card-header">Sales</h1>
                   <picture>
                       <!-- mobile -->
                       <source media="(max-width:768px)" srcset="./img/product_img2-0.5.jpg">
@@ -239,7 +239,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h5 class="card-header">Sales</h5>
+                  <h1 class="card-header">Sales</h1>
                   <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
@@ -254,7 +254,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h5 class="card-header">Sales</h5>
+                  <h1 class="card-header">Sales</h1>
                   <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
@@ -269,7 +269,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h5 class="card-header">Product</h5>
+                  <h1 class="card-header">Product</h1>
                   <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
@@ -284,7 +284,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h5 class="card-header">Product</h5>
+                  <h1 class="card-header">Product</h1>
                   <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
                   <div class="card-body">
@@ -315,7 +315,7 @@
         <div class="marketing-content row row-cols-lg-2">
           <div class="col-12 mb-5 mb-lg-0">
             <div class="card card-img">
-              <h5 class="card-header">Marketing</h5>
+              <h1 class="card-header">Marketing</h1>
               <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top"
                 sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               <div class="card-body">
@@ -342,7 +342,7 @@
                   <span class="text-black-50">by joshua Nash</span>
                 </h4>
               </div>
-              <h5 class="card-header">PRODUCT</h5>
+              <h1 class="card-header">PRODUCT</h1>
             </div>
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
@@ -356,7 +356,7 @@
                   <span class="text-black-50"> by Laura Ryan</span>
                 </h4>
               </div>
-              <h5 class="card-header">SALES</h5>
+              <h1 class="card-header">SALES</h1>
             </div>
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
@@ -370,7 +370,7 @@
                   <span class="text-black-50"> by Alice Washington</span>
                 </h4>
               </div>
-              <h5 class="card-header">NEWS</h5>
+              <h1 class="card-header">NEWS</h1>
             </div>
           </div>
         </div>
@@ -393,7 +393,7 @@
             <div class="product-content row row-cols-md-2 row-cols-lg-3 ">
               <div class="col-12 mb-5 mb-lg-0">
                 <div class="card card-img">
-                    <h5 class="card-header">SERVICE</h5>
+                    <h1 class="card-header">SERVICE</h1>
                     <img src="./img/article__img1.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
@@ -408,7 +408,7 @@
               </div>
               <div class="col-12 mb-5 mb-lg-0">
                 <div class="card card-img">
-                    <h5 class="card-header">SALES</h5>
+                    <h1 class="card-header">SALES</h1>
                     <img src="./img/article__img2.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
@@ -423,7 +423,7 @@
               </div>
               <div class="col-12 mb-5 mb-lg-0">
                 <div class="card card-img">
-                    <h5 class="card-header">SERVICE</h5>
+                    <h1 class="card-header">SERVICE</h1>
                     <img src="./img/article__img3.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
@@ -487,11 +487,11 @@
     <footer class="footer">
         <div class="footer-content container">
             <div class="card ">
-                <div class="card-header">
+                <di1 class="card-header">
                     <a href="#" class="logo">
                         <img src="./img/logo.png" alt="logo">
                     </a>
-                </div>
+                </di1>
                 <div class="card-body">
                     <p class="text-sm">
                         We built an elegant solution.<br>
