--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -166,7 +166,9 @@
               <h1 class="card-header">SERVICE</h1>
               <div class="card-body">
                 <h3 class="card-text">
+                  <a class="text-black" href="#">
                   CRM insights: Selecting the Right One for Your Organization
+                  </a>
                 </h3>
               </div>
               <h4 class="card-footer">
@@ -207,8 +209,8 @@
                           class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                   </picture>
                   <div class="card-body">
-                      <h3>
-                          <a class="card-text" href="#">
+                      <h3 class="card-text">
+                          <a class="text-black" href="#">
                               How To Deliver a Successful Product Launch
                           </a>
                       </h3>
@@ -228,8 +230,8 @@
                           class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                   </picture>
                   <div class="card-body">
-                      <h3>
-                          <a class="card-text" href="#">
+                      <h3 class="card-text">
+                          <a class="text-black" href="#">
                               The best cities for sales careers in 2022
                           </a>
                       </h3>
@@ -243,8 +245,8 @@
                   <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
-                      <h3>
-                          <a class="card-text" href="#">
+                      <h3 class="card-text">
+                          <a class="text-black" href="#">
                               How to use 360 feedback to improve sales performance
                           </a>
                       </h3>
@@ -258,8 +260,8 @@
                   <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
-                      <h3>
-                          <a class="card-text" href="#">
+                      <h3 class="card-text">
+                          <a class="text-black" href="#">
                               The Challenger Sale model: How to lead the conversation
                           </a>
                       </h3>
@@ -273,8 +275,8 @@
                   <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
-                      <h3>
-                          <a class="card-text" href="#">
+                      <h3 class="card-text">
+                          <a class="text-black" href="#">
                               3 ways To automate your lead generation process with Yoora
                           </a>
                       </h3>
@@ -288,8 +290,8 @@
                   <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
                   <div class="card-body">
-                      <h3>
-                          <a class="card-text" href="#">
+                      <h3 class="card-text">
+                          <a class="text-black" href="#">
                               Marketplace Monthly Apps Spotlight: Aug 2022
                           </a>
                       </h3>
@@ -397,8 +399,8 @@
                     <img src="./img/article__img1.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
-                        <h3>
-                            <a class="card-text" href="#">
+                        <h3 class="card-text">
+                            <a class="text-black" href="#">
                                 Sales Funnels: Definition, Process, Stages and Examples
                             </a>
                         </h3>
@@ -412,8 +414,8 @@
                     <img src="./img/article__img2.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
-                        <h3>
-                            <a class="card-text" href="#">
+                        <h3 class="card-text">
+                            <a class="text-black" href="#">
                                 What is a sales Yoora and how do you build one?
                             </a>
                         </h3>
@@ -427,8 +429,8 @@
                     <img src="./img/article__img3.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
-                        <h3>
-                            <a class="card-text" href="#">
+                        <h3 class="card-text">
+                            <a class="text-black" href="#">
                                 10 real estate cold calling scripts to increase lead generation
                             </a>
                         </h3>
