--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -393,7 +393,7 @@
     <section class="article product">
         <div class="container">
             <div class="product-content row row-cols-md-2 row-cols-lg-3 ">
-              <div class="col-12 mb-5 mb-lg-0">
+              <div class="col-12 mb-5 mb-lg-0 d-flex">
                 <div class="card card-img">
                     <h1 class="card-header">SERVICE</h1>
                     <img src="./img/article__img1.png" alt="Here is a photo of the article title above" class="card-img-top"
@@ -408,7 +408,7 @@
                     <h4 class="card-footer">29 Jun 2022, <span class="text-black-50">by joshua Nash</span>
                 </div>
               </div>
-              <div class="col-12 mb-5 mb-lg-0">
+              <div class="col-12 mb-5 mb-lg-0 d-flex">
                 <div class="card card-img">
                     <h1 class="card-header">SALES</h1>
                     <img src="./img/article__img2.png" alt="Here is a photo of the article title above" class="card-img-top"
@@ -420,10 +420,10 @@
                             </a>
                         </h3>
                     </div>
-                    <h4 class="card-footer">29 Mar 2022,, <span class="text-black-50">by Amanda Brooks</span>
+                    <h4 class="card-footer">29 Mar 2022, <span class="text-black-50">by Amanda Brooks</span>
                 </div>
               </div>
-              <div class="col-12 mb-5 mb-lg-0">
+              <div class="col-12 mb-5 mb-lg-0 d-flex">
                 <div class="card card-img">
                     <h1 class="card-header">SERVICE</h1>
                     <img src="./img/article__img3.png" alt="Here is a photo of the article title above" class="card-img-top"
