--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- index CSS -->
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                                 <a class="item nav-text nav-link " href="#">Contact</a>
                             </li>
                         </ul>
-                        <form class=" nav-button navbar-nav d-flex" role="button">
+                        <form class=" nav-button navbar-nav d-flex" >
                             <button class="btn btn-primary">Login</button>
                             <button class="btn btn-secondary">Try for Free</button>
                         </form>
@@ -435,8 +435,7 @@
                             </a>
                         </h3>
                     </div>
-                    <h4 class="card-footer"> 27 Dec 2022, <span class="text-black-50">by Roxie Sandoval</span>
-                </div>
+                    <h4 class="card-footer"> 27 Dec 2022, <span class="text-black-50">by Roxie Sandoval</span></h4>
               </div>
             </div>
         </div>
@@ -456,7 +455,7 @@
         <div class="cta-content card container">
             <div class="card-body  ">
                 <div class="card-text ">
-                    <h1 class="text-lg" href="#">
+                    <h1 class="text-lg">
                         <a href="#" class="text-white">
                             Ready to supercharge your business?
                         </a>
@@ -489,11 +488,11 @@
     <footer class="footer">
         <div class="footer-content container">
             <div class="card ">
-                <di1 class="card-header">
+                <div class="card-header">
                     <a href="#" class="logo">
                         <img src="./img/logo.png" alt="logo">
                     </a>
-                </di1>
+                </div>
                 <div class="card-body">
                     <p class="text-sm">
                         We built an elegant solution.<br>
