Revert "REFACTOR: Refactor format accordion"
This reverts commit 140bcb6b54bcc0947f5ac2186939708d54bdc9a1.

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -56,9 +56,9 @@
             </nav>
 
             <div class="header-carousel">
-                <h1 class="text-black text-lg">New and insights <br>
+                <p class="text-black text-lg">New and insights <br>
                     <span class="text-black-50">form our experts</span>
-                </h1>
+                </p>
             </div>
             <div class="header-tab nav-menu ">
                 <ul
@@ -163,17 +163,17 @@
         <div class="row row-cols-md-2 gap-2 flex-md-nowrap">
           <div class="service-left d-flex col-12 col-md-6 mb-md-0 ">
             <div class="card w-100 mb-md-0">
-              <h3 class="card-header">SERVICE</h3>
+              <h1 class="card-header">SERVICE</h1>
               <div class="card-body">
-                <p class="card-text">
+                <h3 class="card-text">
                   <a class="text-black" href="#">
                     CRM insights: Selecting the Right One for Your Organization
                   </a>
-                </p>
+                </h3>
               </div>
-              <p class="card-footer">
+              <h4 class="card-footer">
                 05 Sep 2022, <span class="text-black-50">by Joshua Nash</span>
-              </p>
+              </h4>
             </div>
           </div>
           <div class="service-right col-12 col-md-6">
@@ -199,7 +199,7 @@
           <div class="product-content row row-cols-md-2 row-cols-lg-3">
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h3 class="card-header">New</h3>
+                  <h1 class="card-header">New</h1>
                   <picture>
                       <!-- mobile -->
                       <source media="(max-width:768px)" srcset="./img/product_img1-0.5x.jpg ">
@@ -209,18 +209,18 @@
                           class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                   </picture>
                   <div class="card-body">
-                      <p class="card-text">
+                      <h3 class="card-text">
                           <a class="text-black" href="#">
                               How To Deliver a Successful Product Launch
                           </a>
-                      </p>
+                      </h3>
                   </div>
-                  <p class="card-footer">29 Jun 2022,<span class="text-black-50">by joshua Nash</span> </p>
+                  <h4 class="card-footer">29 Jun 2022,<span class="text-black-50">by joshua Nash</span> </h4>
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h3 class="card-header">Sales</h3>
+                  <h1 class="card-header">Sales</h1>
                   <picture>
                       <!-- mobile -->
                       <source media="(max-width:768px)" srcset="./img/product_img2-0.5.jpg">
@@ -230,73 +230,73 @@
                           class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                   </picture>
                   <div class="card-body">
-                      <p class="card-text">
+                      <h3 class="card-text">
                           <a class="text-black" href="#">
                               The best cities for sales careers in 2022
                           </a>
-                      </p>
+                      </h3>
                   </div>
-                  <p class="card-footer">20 Mar 2022, <span class="text-black-50">by Bill Holloway</span></p>
+                  <h4 class="card-footer">20 Mar 2022, <span class="text-black-50">by Bill Holloway</span></h4>
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h3 class="card-header">Sales</h3>
+                  <h1 class="card-header">Sales</h1>
                   <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
-                      <p class="card-text">
+                      <h3 class="card-text">
                           <a class="text-black" href="#">
                               How to use 360 feedback to improve sales performance
                           </a>
-                      </p>
+                      </h3>
                   </div>
-                  <p class="card-footer">07 Jun 2022, <span class="text-black-50">by Stephen Henderson</span>
+                  <h4 class="card-footer">07 Jun 2022, <span class="text-black-50">by Stephen Henderson</span>
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h3 class="card-header">Sales</h3>
+                  <h1 class="card-header">Sales</h1>
                   <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
-                      <p class="card-text">
+                      <h3 class="card-text">
                           <a class="text-black" href="#">
                               The Challenger Sale model: How to lead the conversation
                           </a>
-                      </p>
+                      </h3>
                   </div>
-                  <p class="card-footer">09 Jan 2022,<span class="text-black-50">by joshua Nash</span> </p>
+                  <h4 class="card-footer">09 Jan 2022,<span class="text-black-50">by joshua Nash</span> </h4>
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h3 class="card-header">Product</h3>
+                  <h1 class="card-header">Product</h1>
                   <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
-                      <p class="card-text">
+                      <h3 class="card-text">
                           <a class="text-black" href="#">
                               3 ways To automate your lead generation process with Yoora
                           </a>
-                      </p>
+                      </h3>
                   </div>
-                  <p class="card-footer">08 Jul 2022, <span class="text-black-50"> Leroy Figueroa</span> </p>
+                  <h4 class="card-footer">08 Jul 2022, <span class="text-black-50"> Leroy Figueroa</span> </h4>
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
-                  <h3 class="card-header">Product</h3>
+                  <h1 class="card-header">Product</h1>
                   <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
                   <div class="card-body">
-                      <p class="card-text">
+                      <h3 class="card-text">
                           <a class="text-black" href="#">
                               Marketplace Monthly Apps Spotlight: Aug 2022
                           </a>
-                      </p>
+                      </h3>
                   </div>
-                  <p class="card-footer">05 Aug 2022,<span class="text-black-50">by joshua Nash</span> </p>
+                  <h4 class="card-footer">05 Aug 2022,<span class="text-black-50">by joshua Nash</span> </h4>
               </div>
             </div>
           </div>
@@ -317,62 +317,62 @@
         <div class="marketing-content row row-cols-lg-2">
           <div class="col-12 mb-5 mb-lg-0">
             <div class="card card-img">
-              <h3 class="card-header">Marketing</h3>
+              <h1 class="card-header">Marketing</h1>
               <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top"
                 sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               <div class="card-body">
-                <p class="card-text">
+                <h3 class="card-text">
                   Email marketing best practices: 10 experts share their email tips
-                </p>
+                </h3>
               </div>
-              <p class="card-footer">
+              <h4 class="card-footer">
                 23 Nov 2022,
                 <span class="text-black-50">by joshua Nash</span>
-              </p>
+              </h4>
             </div>
           </div>
           <div class="col-12 d-flex flex-column gap-4 ">
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
                 <div class="card-body">
-                  <p class="card-text">
+                  <h3 class="card-text">
                     Access Yoora’s leads features on your mobile
-                  </p>
+                  </h3>
                 </div>
-                <p class="card-footer">
+                <h4 class="card-footer">
                   11 Aug 2022,
                   <span class="text-black-50">by joshua Nash</span>
-                </p>
+                </h4>
               </div>
-              <h3 class="card-header">PRODUCT</h3>
+              <h1 class="card-header">PRODUCT</h1>
             </div>
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
                 <div class="card-body">
-                  <p class="card-text">
+                  <h3 class="card-text">
                     Sales presentations: templates, examples and ideas on how to present like a pro
-                  </p>
+                  </h3>
                 </div>
-                <p class="card-footer">
+                <h4 class="card-footer">
                   11 Oct 2022,
                   <span class="text-black-50"> by Laura Ryan</span>
-                </p>
+                </h4>
               </div>
-              <h3 class="card-header">SALES</h3>
+              <h1 class="card-header">SALES</h1>
             </div>
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
                 <div class="card-body">
-                  <p class="card-text">
+                  <h3 class="card-text">
                     How To Deliver a Successful Product Launch
-                  </p>
+                  </h3>
                 </div>
-                <p class="card-footer">
+                <h4 class="card-footer">
                   30 Jan 2022,
                   <span class="text-black-50"> by Alice Washington</span>
-                </p>
+                </h4>
               </div>
-              <h3 class="card-header">NEWS</h3>
+              <h1 class="card-header">NEWS</h1>
             </div>
           </div>
         </div>
@@ -395,47 +395,47 @@
             <div class="product-content row row-cols-md-2 row-cols-lg-3 ">
               <div class="col-12 mb-5 mb-lg-0 d-flex">
                 <div class="card card-img">
-                    <h3 class="card-header">SERVICE</h3>
+                    <h1 class="card-header">SERVICE</h1>
                     <img src="./img/article__img1.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
-                        <p class="card-text">
+                        <h3 class="card-text">
                             <a class="text-black" href="#">
                                 Sales Funnels: Definition, Process, Stages and Examples
                             </a>
-                        </p>
+                        </h3>
                     </div>
-                    <p class="card-footer">29 Jun 2022, <span class="text-black-50">by joshua Nash</span>
+                    <h4 class="card-footer">29 Jun 2022, <span class="text-black-50">by joshua Nash</span>
                 </div>
               </div>
               <div class="col-12 mb-5 mb-lg-0 d-flex">
                 <div class="card card-img">
-                    <h3 class="card-header">SALES</h3>
+                    <h1 class="card-header">SALES</h1>
                     <img src="./img/article__img2.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
-                        <p class="card-text">
+                        <h3 class="card-text">
                             <a class="text-black" href="#">
                                 What is a sales Yoora and how do you build one?
                             </a>
-                        </p>
+                        </h3>
                     </div>
-                    <p class="card-footer">29 Mar 2022, <span class="text-black-50">by Amanda Brooks</span>
+                    <h4 class="card-footer">29 Mar 2022, <span class="text-black-50">by Amanda Brooks</span>
                 </div>
               </div>
               <div class="col-12 mb-5 mb-lg-0 d-flex">
                 <div class="card card-img">
-                    <h3 class="card-header">SERVICE</h3>
+                    <h1 class="card-header">SERVICE</h1>
                     <img src="./img/article__img3.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
-                        <p class="card-text">
+                        <h3 class="card-text">
                             <a class="text-black" href="#">
                                 10 real estate cold calling scripts to increase lead generation
                             </a>
-                        </p>
+                        </h3>
                     </div>
-                    <p class="card-footer"> 27 Dec 2022, <span class="text-black-50">by Roxie Sandoval</span></p>
+                    <h4 class="card-footer"> 27 Dec 2022, <span class="text-black-50">by Roxie Sandoval</span></h4>
               </div>
             </div>
         </div>
@@ -466,13 +466,13 @@
                     </p>
                 </div>
             </div>
-            <p class="card-footer ">
+            <div class="card-footer ">
                 <button class="btn btn-primary">
                     Try For Free
                     <img src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
                 </button>
                 <span class="text-sm text-white">Full access. No credit card required.</span>
-            </p>
+            </div>
         </div>
     </section>
     <!-------------------
@@ -499,7 +499,7 @@
                         Our team created a fully integrated sales<br>
                         and marketing solution for SMBs</p>
                 </div>
-                <p class="card-footer">
+                <div class="card-footer">
                     <ul class="media menu-list">
                         <li>
                             <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png"
@@ -514,7 +514,7 @@
                                     alt="Here is a logo of the media above"></a>
                         </li>
                     </ul>
-                </p>
+                </div>
             </div>
             <div class="footer-menu nav-menu">
                 <ul class="menu-list text-sm">
