--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -455,11 +455,11 @@
         <div class="cta-content card container">
             <div class="card-body  ">
                 <div class="card-text ">
-                    <h1 class="text-lg">
+                    <p class="text-lg">
                         <a href="#" class="text-white">
                             Ready to supercharge your business?
                         </a>
-                    </h1>
+                    </p>
                     <p class="text-white-50 text-md">
                         Ask about Yoora products, pricing, implementation, or anything else.
                         Our highly trained reps are standing by, ready to help.
