--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -499,7 +499,7 @@
                         Our team created a fully integrated sales<br>
                         and marketing solution for SMBs</p>
                 </div>
-                <p class="card-footer">
+                <div class="card-footer">
                     <ul class="media menu-list">
                         <li>
                             <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png"
@@ -514,7 +514,7 @@
                                     alt="Here is a logo of the media above"></a>
                         </li>
                     </ul>
-                </p>
+                </div>
             </div>
             <div class="footer-menu nav-menu">
                 <ul class="menu-list text-sm">
@@ -564,9 +564,9 @@
 
         <div class="footer-rule container">
             <div class="nav-menu ">
-                <h3 class="item ">
+                <p class="item ">
                     <a class="text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
-                </h3>
+                </p>
                 <ul class="menu-list">
                     <li class="list-item"><a class="item" href="#">Terms of Service</a></li>
                     <li class="list-item"><a class="item" href="#">Privacy Police</a></li>
