--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -354,7 +354,7 @@
                 <source media="(max-width:768px)" srcset="./img/marketing-0.5.jpg">
                 <!-- desktop -->
                 <source media="(min-width:768px)" srcset="./img/marketing-1.5.jpg ">
-                <img src="./img/marketing-0.5.jpg" alt="Here is a photo of the product title above"
+                <img src="./img/marketing-0.5.jpg" alt="Here is a photo of the marketing title above"
                     class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
             </picture>
               <div class="card-body">
